# integration

./: README.md  mypy.ini  pyproject.toml
core/: README.md  pyproject.toml
core/core/: crud_base.py  db.py  db_settings.py  helper.py  helper_config.py  logging.json  logging.py  logging_config.py  models.py
hubspot_integration/: README.md  pyproject.toml
hubspot_integration/hubspot_integration/: crud_provider.py  crud_shop.py  hubspot_config.py  hubspot_operations.py  main.py  settings.py
hubspot_integration/hubspot_integration/__tests__/: test_crud.py  test_data.py  test_hubspot.py
netvisor_integration/: README.md  pyproject.toml
netvisor_integration/netvisor_integration/: crud_provider.py  main.py  netvisor_config.py  netvisor_models.py  netvisor_operations.py  settings.py
netvisor_integration/tests/: test_netvisor_integration.py
scripts/: format.sh  lint.sh
webflow_integration/: README.md  pyproject.toml
webflow_integration/webflow_integration/: crud_shop.py  main.py  play.py  webflow_models.py  webflow_operations.py  webflow_settings.py
webflow_integration/webflow_integration/__tests__/: test_webflow.py
